Add long explanation

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "name": "trump",
     "prompt": "Trump will win the U.S. presidential election in 2024, nationalism brings manufacturing and mining jobs back to the U.S. Domestic manufacturing and fossil fuel companies will benefit. Inflation will happen and media companies will flourish in the chaos.",
+    "explanation": "The current polls and odds favor a Trump win in 2024, should that occur investing in domestic manufacturing, fossil fuel companies, and media sectors would be timely as nationalism rises under a potential Trump administration in 2024. Nationalistic policies may prioritize bringing manufacturing and mining jobs back to the U.S., boosting these industries. Such economic shifts could lead to inflation, which historically benefits media companies as public demand for news and analysis grows amid uncertainty. The potential for increased domestic production and energy reliance presents unique opportunities for investors focused on sectors likely to gain from these developments.",
     "github_repo": "trump"
 }
